@@ -10,8 +10,7 @@
 #   in PPP and Wireless LAN Networks
 #
 # ASN.1 source from:
-# https://www.rfc-editor.org/rfc/rfc3770.txt
-# https://www.rfc-editor.org/errata/eid234
+# https://www.rfc-editor.org/rfc/rfc4334.txt
 #
 
 from pyasn1.type import constraint
@@ -19,40 +18,41 @@ from pyasn1.type import univ
 
 from pyasn1_modules import rfc5280
 
-
 MAX = float('inf')
+
+
+# OID Arcs
+
+id_pe = univ.ObjectIdentifier('1.3.6.1.5.5.7.1')
+
+id_kp = univ.ObjectIdentifier('1.3.6.1.5.5.7.3')
+
+id_aca = univ.ObjectIdentifier('1.3.6.1.5.5.7.10')
 
 
 # Extended Key Usage Values
 
-id_kp_eapOverLAN = univ.ObjectIdentifier('1.3.6.1.5.5.7.3.14')
+id_kp_eapOverPPP = id_kp + (13, )
 
-id_kp_eapOverPPP = univ.ObjectIdentifier('1.3.6.1.5.5.7.3.13')
+id_kp_eapOverLAN = id_kp + (14, )
 
 
 # Wireless LAN SSID Extension
 
-id_pe_wlanSSID = univ.ObjectIdentifier('1.3.6.1.5.5.7.1.13')
-
+id_pe_wlanSSID = id_pe + (13, )
 
 class SSID(univ.OctetString):
-    pass
-
-SSID.subtypeSpec = constraint.ValueSizeConstraint(1, 32)
+    constraint.ValueSizeConstraint(1, 32)
 
 
 class SSIDList(univ.SequenceOf):
-    pass
-
-SSIDList.componentType = SSID()
-SSIDList.subtypeSpec=constraint.ValueSizeConstraint(1, MAX)
+    componentType = SSID()
+    subtypeSpec=constraint.ValueSizeConstraint(1, MAX)
 
 
 # Wireless LAN SSID Attribute Certificate Attribute
-# Uses same syntax as the certificate extension: SSIDList
-# Correction for https://www.rfc-editor.org/errata/eid234
 
-id_aca_wlanSSID = univ.ObjectIdentifier('1.3.6.1.5.5.7.10.7')
+id_aca_wlanSSID = id_aca + (7, )
 
 
 # Map of Certificate Extension OIDs to Extensions
